src/objects/E2CP__Canned_Comment_Filter__c.object
<CustomObject>
    <description>Used to determine which Canned Comments Categories are available for use from the New Comment page based on the selected Controlling Field and Values.</description>
    <fields>
        <fullName>E2CP__Categories__c</fullName>
        <inlineHelpText>The Canned Comment Categories that will be available for selection on the New Comment page when the Case controlling field has a matching value.</inlineHelpText>
        <label>Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Controlling_Field_Values__c</fullName>
        <inlineHelpText>Values for the Case Controlling Field that will need to match in order for this group to be included in the available Canned Comment options for the New Comment page.</inlineHelpText>
        <label>Controlling Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Controlling_Field__c</fullName>
        <inlineHelpText>The field on Case which will be checked to determine if this group should be included in the displayed Canned Comment options for the New Comment page.</inlineHelpText>
        <label>Controlling Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Description__c</fullName>
        <inlineHelpText>Optional text describing the Canned Comment Filter and a way to distinguish it from other filters.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Canned Comment Filter</label>
    <listViews>
        <fullName>E2CP__All</fullName>
        <columns>NAME</columns>
        <columns>E2CP__Description__c</columns>
        <columns>E2CP__Controlling_Field__c</columns>
        <columns>E2CP__Controlling_Field_Values__c</columns>
        <columns>E2CP__Categories__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Canned Comment Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Comment Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>